# gem_e2_autonomy

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/basic_autonomy/: CMakeLists.txt  package.xml
src/basic_autonomy/config/: base_global_planner_params.yaml  empty_map.yaml  teb_local_planner_params.yaml
src/basic_autonomy/data/: waypoints.csv
src/basic_autonomy/launch/: e2_basic_autonomy.launch
src/pointcloud_adapter/: CMakeLists.txt  package.xml
src/pointcloud_adapter/src/: pointcloud_adapter.py
src/waypoint_global_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/waypoint_global_planner/include/waypoint_global_planner/: waypoint_global_planner.hpp
src/waypoint_global_planner/src/: waypoint_global_planner.cpp
src/waypoints_provider/: CMakeLists.txt  package.xml
src/waypoints_provider/include/waypoints_provider/: waypoints_provider.hpp
src/waypoints_provider/launch/: waypoints_provider.launch
src/waypoints_provider/src/: waypoints_provider.cpp
