<?xml version="1.0"?>
<package format="2">
  <name>basic_autonomy</name>
  <version>0.0.0</version>
  <description>The basic_autonomy package</description>

  <maintainer email="smk.robotics@gmail.com">Kirill Smirnov</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
</package>
