<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_adapter</name>
  <version>0.0.0</version>
  <description>The pointcloud_adapter package</description>

  <maintainer email="smk.robotics@gmail.com">Kirill Smirnov</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
