<?xml version="1.0"?>
<package format="2">
  <name>waypoint_global_planner</name>
  <version>0.0.0</version>
  <description>The waypoint_global_planner package</description>

  <maintainer email="smk.robotics@gmail.com">Kirill Smirnov</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>global_planner</exec_depend>
  <exec_depend>move_base</exec_depend>

  <export>
    <nav_core plugin="${prefix}/global_planner_plugin.xml" />
  </export>
</package>