<?xml version="1.0"?>
<package format="2">
  <name>waypoints_provider</name>
  <version>0.0.0</version>
  <description>The waypoints provider package.</description>

  <maintainer email="smk.robotics@gmail.com">Kirill Smirnov</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
</package>
